# pynatem

./: .coverage  .flake8  .gitignore  AUDITORIA_TRANSCRIÇÕES_MARKDOWN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARACAO_VISUAL_EXEMPLOS_vs_PDF.md  CONTRIBUTING.md  DOCUMENTO_UNIFICADO_VERIFICAÇÃO_PESSOAL.md  GUIA_COMPARACAO_VISUAL_INTERATIVA.md  INDEX.md  LICENSE  MARKDOWNS_REORGANIZACAO_CONCLUIDA.md  PLANO_V2_1.md  README.md  REVISAO_SESSAO_V2.md  ROADMAP.md  ROADMAP_V2.md  SECURITY.md  TEORIA.md  V0_15_CHECKLIST.md  V0_15_RELEASE_NOTES.md  V1_0_NEXT_STEPS.md  VALIDACAO_CODIGO_vs_MANUAL.md  codecov.yml  mkdocs.yml  pendentes_listagens.txt  pyproject.toml  requirements.txt  temp_batch.stb  temp_cdu_import.stb  temp_dopc.stb  temp_dsim.stb  temp_encoding2.stb  temp_events.stb  temp_large.stb  temp_minimal.stb  temp_modified.stb  temp_order.stb  temp_workflow.stb
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
.github/workflows/: lint.yml  pypi.yml  release.yml  tests.yml
benchmarks/: bench_core.py
docs/: api.md  contributing.md  getting-started.md  index.md  index_en.md  tutorial.md
examples/: 01_basic_case_creation.py  02_edit_existing_case.py  03_batch_contingencies.py  04_validation.py  05_postprocessing.py  06_cdu_advanced.py  07_integration_workflow.py  08_posprocessamento_v14.py  09_v14_complete.py  10_v17_cdu_avancado.py  11_v18_analise_modos.py  12_v19_estabilidade.py  13_v110_dsa.py  README.md
memory/: MEMORY.md  commit_convention.md  session_checkpoint_2026_07.md
pyanatem/: __init__.py  analise_v18.py  anarede.py  blocos.py  caso.py  cdu_v17.py  dsa_v110.py  ensaio.py  posprocessamento.py  posprocessamento_v2.py
pyanatem/cdu/: __init__.py
pyanatem/parser/: plt_binario.py  stb.py
pynatem/: __init__.py  analise_v18.py  anarede.py  blocos.py  caso.py  cdu_v17.py  dsa_v110.py  ensaio.py  estabilidade_v19.py  posprocessamento.py  posprocessamento_v2.py  reguas_mdxx.py
pynatem/cdu/: __init__.py
pynatem/eventos/: __init__.py
pynatem/modelos/: __init__.py
pynatem/parser/: plt_binario.py  stb.py
tests/: conftest.py  test_cdu_extended.py  test_conformidade_manual.py  test_postprocessing_extended.py  test_pyanatem.py  test_pynatem.py  test_roundtrip_extended.py  test_v2_1_posprocessamento.py  test_v2_2_cdu_avancado.py  test_v2_3_analise.py  test_v2_4_opcoes.py  test_v2_5_estabilidade.py  test_validation_extended.py
v0.11.3/: pyproject.toml
v0.11.3/pyanatem/: __init__.py  caso.py  ensaio.py  posprocessamento.py
v0.11.3/pyanatem/cdu/: __init__.py
v0.11.3/pyanatem/modelos/: __init__.py
v0.14.2/pyanatem/: __init__.py  blocos.py
v0.14.2/tests/: test_pyanatem.py
v0.6.0/: pyproject.toml
v0.6.0/pyanatem/: __init__.py  anarede.py  caso.py  ensaio.py  posprocessamento.py
v0.6.0/tests/: test_pyanatem.py
v0.8.0/: pyproject.toml
v0.8.0/pyanatem/: __init__.py  blocos.py  caso.py  ensaio.py
v0.8.0/pyanatem/cdu/: __init__.py
v0.8.0/tests/: test_pyanatem.py
