[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyanatem"
version = "1.1.5"
description = "Biblioteca Python para geração e manipulação de arquivos ANATEM (.stb)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["anatem", "power systems", "stability", "transient", "cepel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electrical Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
plt = ["pandas"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyanatem*"]

[tool.ruff]
line-length = 100
target-version = "py39"
