[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynatem"
version = "1.9.4"
description = "Biblioteca Python para geração e manipulação de arquivos ANATEM (.stb)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["anatem", "power systems", "stability", "transient", "cepel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electrical Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [{ name = "Matheus Antonio Vivas Rocha" }]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "black", "isort"]
plt = ["pandas"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pynatem*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[project.urls]
Homepage = "https://github.com/matheusvivasr/pynatem"
Repository = "https://github.com/matheusvivasr/pynatem"
Issues = "https://github.com/matheusvivasr/pynatem/issues"
Changelog = "https://github.com/matheusvivasr/pynatem/blob/vivas/CHANGELOG.md"
